--- a/src/containers/cart/cart.css
+++ b/src/containers/cart/cart.css
@@ -3,3 +3,18 @@
     width: 100%;
     padding: 0 10px;
 }
+
+.cart_list_item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #eee;
+    border-radius: 3px;
+    margin: 10px;
+}
+
+.remove-from-cart-btn{
+}
