--- a/src/containers/cart/cart.css
+++ b/src/containers/cart/cart.css
@@ -1,5 +1,6 @@
 .App-cart {
     display: flex;
+    flex-direction: column;
     width: 100%;
     padding: 0 10px;
 }
@@ -10,7 +11,6 @@
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 10px;
-    width: 100%;
     border: 1px solid #eee;
     border-radius: 3px;
     margin: 10px;
